--- a/screenresolution.html
+++ b/screenresolution.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <picture>
-    <source media = "(max-width : 650px)" srcset = "C:\Users\prana\Desktop\FSD\download (1).png"/>
-    <source media = "(max-width : 1500px)" srcset = "C:\Users\prana\Desktop\FSD\download.jpg"/>
-    <img src ="C:\Users\prana\Desktop\FSD\download.png"/>
+    <source media = "(max-width : 650px)" srcset = "C:\Users\prana\Desktop\FSD\tj1.png"/>
+    <source media = "(max-width : 1500px)" srcset ="C:\Users\prana\Desktop\FSD\tj2.jpg"/>
+    <img src ="C:\Users\prana\Desktop\FSD\doremon.png"/>
   </picture>
 </body>
 </html>
